--- a/lessons/03-13-lesson10/styles.css
+++ b/lessons/03-13-lesson10/styles.css
@@ -5,19 +5,27 @@ body {
 .box {
     width: 100px;
     height: 100px;
-    border: 5px solid pink;
+    border: 15px solid pink;
     margin: 10px;
 }
 
 .rgb {
+    background-color: rgb(255, 0, 0);
+    box-sizing: content-box;
 }
 
 .hsl {
+    background-color: hsl(270, 50%, 50%);
 }
 
 .hex {
-
+    background-color: #ffffff;
 }
 
 .rgba {
+    background-color: rgba(255,0,0, 0.5);
+}
+
+.col {
+    border: 1px solid black;
 }
