--- a/lessons/03-18-lesson11/styles.css
+++ b/lessons/03-18-lesson11/styles.css
@@ -19,7 +19,8 @@ body {
 
 .post {
     border: 10px solid green;
-    padding-bottom: 20px;
+    padding: 10px;
+    margin: 10px;
 }
 
 .content {
